ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: node-app
spec:
  rules:
    - http:
        paths:
          - path: /node-app
            backend:
              serviceName: node-app
              servicePort: 80
